--- a/index.html
+++ b/index.html
@@ -3,35 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BME280 Dashboard</title>
+  <title>BME280 Sensor Dashboard</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
     .data { font-size: 1.5em; margin: 10px 0; }
   </style>
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyAndt5uBom20HzVy6UGMUCE5vfpEM89DLg",
-      authDomain: "weather-station-robotic.firebaseapp.com",
-      databaseURL: "https://weather-station-robotic-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "weather-station-robotic",
-      storageBucket: "weather-station-robotic.firebasestorage.app",
-      messagingSenderId: "1048989852003",
-      appId: "1:1048989852003:web:054c02367e8576f2c4b356",
-      measurementId: "G-2T100ESW87"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
 </head>
 <body>
   <h1>BME280 Sensor Dashboard</h1>
@@ -42,12 +18,12 @@
   <script>
     async function fetchSensorData() {
       try {
-        const response = await fetch("https://weather-station-robotic-default-rtdb.europe-west1.firebasedatabase.app/");
+        const response = await fetch("https://api.thingspeak.com/channels/2796774/fields/1.json?api_key=WTJVJ8NK8N6WABEH");
         const data = await response.json();
 
-        document.getElementById("temperature").textContent = `Temperature: ${data.temperature} °C`;
-        document.getElementById("humidity").textContent = `Humidity: ${data.humidity} %`;
-        document.getElementById("pressure").textContent = `Pressure: ${data.pressure} hPa`;
+        document.getElementById("temperature").textContent = `Temperature: ${data.field1} °C`;
+        document.getElementById("humidity").textContent = `Humidity: ${data.field2} %`;
+        document.getElementById("pressure").textContent = `Pressure: ${data.field3} hPa`;
       } catch (error) {
         console.error("Error fetching data:", error);
       }
@@ -59,4 +35,3 @@
   </script>
 </body>
 </html>
-
