--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Mikroiklim ve Tarım Verisi Entegrasyonu</h1>
       <img src="greenhouse.png" alt="Greenhouse Image" class="header-img">
     </header>
-
+    <script src="script.js"></script>
     <div class="sensor-data">
       <h2>Mevcut Sensör Verileri</h2>
       <p>Sıcaklık: <span id="current-temperature">Yükleniyor...</span> °C</p>
@@ -37,7 +37,7 @@
     </footer>
   </div>
 
-  <script src="script.js"></script> <!-- Link to the external JS file -->
+  
 </body>
 
 </html>
