--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script src="script.js"></script>
     <div class="sensor-data">
       <h2>Mevcut Sensör Verileri</h2>
-      <p>Sıcaklık: <span id="current-temperature">Yükleniyor...</span> °C</p>
-      <p>Nem: <span id="current-humidity">Yükleniyor...</span> %</p>
-      <p>Işık Yoğunluğu: <span id="current-light">Yükleniyor...</span> %</p>
+      <p>Sıcaklık: <span id="current-temperature">Yükleniyor...</span></p>
+      <p>Nem: <span id="current-humidity">Yükleniyor...</span></p>
+      <p>Işık Yoğunluğu: <span id="current-light">Yükleniyor...</span></p>
     </div>
 
     <div class="optimal-plants">
